--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/css-modules": "^1.0.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.2.0",
     "compression": "^1.7.4",
     "express": "^4.18.2",
-    "serve-static": "^1.15.0"
+    "serve-static": "^1.15.0",
+    "vite": "^4.2.0"
   }
 }
